--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex,nofollow">
     <title>@mastrum666</title>
+	<link rel="icon" href="title_ico.png" type="image/x-icon">
 	<meta http-equiv="X-Frame-Options" content="DENY">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
